<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_password_main_activity"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/et_shape"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/et_e_mail_main_activity"
        app:layout_constraintStart_toStartOf="@+id/tv_password_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_main_activity" />

    <TextView
        android:id="@+id/tv_password_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/et_e_mail_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/et_e_mail_main_activity" />

    <TextView
        android:id="@+id/tv_e_mail_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/e_mail"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_signup_activity" />

    <ImageView
        android:id="@+id/img_profile_signup_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tiac" />

    <EditText
        android:id="@+id/et_e_mail_main_activity"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/et_shape"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_e_mail_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_e_mail_main_activity" />

    <Button
        android:id="@+id/btn_signin_main_activity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="@+id/et_password_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/et_password_main_activity" />

    <Button
        android:id="@+id/btn_signup_main_activity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/darkGreen"
        android:textColor="@color/lightPurple"
        app:layout_constraintStart_toStartOf="@+id/et_password_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/et_password_main_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>