<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    tools:context=".fragments.RoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title_region_room_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:text="@string/rooms_by_region"
            android:textColor="@color/lightPurple"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_new_room_room_fragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_region_room_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_region_room_fragment" />

        <TextView
            android:id="@+id/tv_title_hobby_room_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/rooms_by_hobby"
            android:textColor="@color/lightPurple"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_region_room_fragment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hobby_room_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_hobby_room_fragment" />

        <TextView
            android:id="@+id/tv_title_custom_room_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/custom_rooms"
            android:textColor="@color/lightPurple"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_custom_room_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_custom_room_fragment" />

        <Button
            android:id="@+id/btn_new_room_room_fragment"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_shape"
            android:text="@string/create_a_new_room"
            android:textColor="@color/lightPurple"
            android:textSize="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_custom_room_fragment" />

        <Button
            android:id="@+id/btn_join_new_room_room_fragment"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_shape"
            android:text="Join a new room"
            android:textColor="@color/lightPurple"
            android:textSize="9sp"
            app:layout_constraintStart_toEndOf="@+id/btn_new_room_room_fragment"
            app:layout_constraintTop_toTopOf="@+id/btn_new_room_room_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>